--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -204,7 +204,9 @@
           about actions performed on the content that may not necessarily be part of the content
           itself.</dd>
         <dt><dfn>OCFL Object</dfn>:</dt>
-        <dd></dd>
+        <dd>A group of one or more content files and administrative
+          information, that are together identified by a URI. The object
+          may contain a sequence of versions of the files that represent the evolution of the object's contents.</dd>
         <dt><dfn>OCFL Object Root</dfn>:<dt>
         <dd>The base directory of an <a>OCFL Object</a> that may exist either as a
           first class directory, or in the case of a zipped OCFL Object, as the top
