--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -218,8 +218,9 @@
           directory in a zip file.</dd>
         <dt><dfn>OCFL Storage Root</dfn>:</dt>
         <dd>The base directory of an OCFL storage layout.</dd>
-        <dt><dfn>Version</dfn>:<dt>
-        <dd>An incremental change to the preserved content of an <a>OCFL Object</a>.</dd>
+        <dt><dfn>OCFL Version</dfn>:<dt>
+        <dd>The state of an OCFL object's content which is constructed using the incremental
+          changes recorded in the sequence of corresponding and prior version directories.</a>.</dd>
     </dl>
 </section>
 
