Finish off text for inventory structure
Refs #117

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -428,7 +428,8 @@
                 </dd>
             </dl>
             <p>
-                In addition to these keys, there are two other blocks
+                In addition to these keys, there MUST be two other blocks present, <code>manifest</code> and
+                <code>versions</code>, which are discussed in the next two sections.
             </p>
         </section>
 
