--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -219,8 +219,8 @@
         <dt><dfn>OCFL Storage Root</dfn>:</dt>
         <dd>The base directory of an OCFL storage layout.</dd>
         <dt><dfn>OCFL Version</dfn>:<dt>
-        <dd>The state of an OCFL object's content which is constructed using the incremental
-          changes recorded in the sequence of corresponding and prior version directories.</a>.</dd>
+        <dd>The state of an <a>OCFL object</a>'s content which is constructed using the incremental
+          changes recorded in the sequence of corresponding and prior version directories.</dd>
     </dl>
 </section>
 
