Fix draft links

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -44,7 +44,7 @@
                     companyURL: "http://duraspace.org/"
                 }
             ],
-            edDraftURI: "https://ocfl.io",
+            edDraftURI: "https://ocfl.io/draft/spec/",
             wg: "Oxford Common File Layout Editors",
             wgURI: "https://ocfl.io",
             wgPublicList: "",
