Link to impl notes from intro, fix link

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -126,7 +126,7 @@
                 },
                 "OCFL-Implementation-Notes": {
                     title: "OCFL Implementation Notes",
-                    href: "implementation-notes.html"
+                    href: "../implementation-notes"
                 }
             }
         };
@@ -157,6 +157,10 @@
             "object-in-motion")
         </li>
     </ol>
+    <p>
+      See also the [[OCFL-Implementation-Notes]] for guidance on how clients should behave when
+      operating on OCFL Objects.
+    </p>
     <section id="need">
         <h2>Need</h2>
         <p>
