--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -285,7 +285,7 @@ processes.
 Version numbering should start with 1 and be positive sequential integers. Names start with a lower case
 <code>v</code>. The numbers may be zero padded to the left to give fixed length, but, if used, zero padded
 numbers must always retain at least one leftmost zero. All versions in an object must use the same version
-numbering layout which can be easily determined by looking at one existing verion &#x2014; if the digit
+numbering layout which can be easily determined by looking at one existing version &#x2014; if the digit
 following <code>v</code> is a zero then the number format is zero padded to fixed length, otherwise it
 is simply an integer.
 </p>
