Fix line length

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -428,8 +428,8 @@
                 </dd>
                 <dt><code>id</code></dt>
                 <dd>
-                    A unique identifier for the OCFL Object. This MUST be unique in the local context, and SHOULD be either a
-                    URI or URN. There is no expectation that values given as URIs are resolveable as URLs.
+                    A unique identifier for the OCFL Object. This MUST be unique in the local context, and SHOULD be
+                    either a URI or URN. There is no expectation that values given as URIs are resolveable as URLs.
                 </dd>
                 <dt><code>type</code></dt>
                 <dd>
