--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -622,7 +622,7 @@
         <section id="inventory-extension">
             <h2>Inventory Extension</h2>
             <p>
-                An OCFL Object Inventory MAY contain extenstions using properties in the inventory beyond those
+                An OCFL Object Inventory MAY contain extensions using properties in the inventory beyond those
                 defined in this specification. OCFL clients MUST ignore any extensions they do not understand.
                 Any extension properties SHOULD be mapped to RDF predicates using further [[!JSON-LD-1.1]] context
                 documents. These extension contexts SHOULD be added to the top level <code>@context</code> property,
