Normative MUST should be caps

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -418,7 +418,7 @@
         <section id="inventory-structure">
             <h2>Basic Structure</h2>
             <p>
-                An OCFL Object Inventory must include the following keys:
+                An OCFL Object Inventory MUST include the following keys:
             </p>
             <dl>
                 <dt><code>@context</code></dt>
