--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -272,7 +272,7 @@ an OCFL object breaks the previous version immutability assumption and is not su
 way to do this is to create a new object that excludes the offending file with a revised version history taking
 this into account. The original object can then be deleted in its entirety. Creating the new object first is
 good practice as it avoids any risk of data loss that may occur if an object were to be deleted before the new object
-is created. The new object will be unlikely to have the same identifer as the orignal object so the deleted object can
+is created. The new object will be unlikely to have the same identifier as the original object so the deleted object can
 be replaced by a stub object that directs users and software to the new version.
 </p>
 </section><section>
