--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -240,7 +240,7 @@
         <p>
             Strictly speaking, OCFL only requires that an OCFL Storage Root contains OCFL Objects in zip files 
             or directories, distributed in some manner in the underlying filesystem. In turn, an OCFL object is 
-            identified purely by the presence of a [[!NAMASTE]] conformance file in the object root. The presence
+            identified purely by the presence of a [[NAMASTE]] conformance file in the object root. The presence
             and correctness of inventory files and version directories are a validation rather than an 
             identification concern. 
         </p>
@@ -399,7 +399,7 @@
                 </li>
                 <li>
                     Reinstatement: Makes content from a version earlier than the previous version available in
-                    the current version of an OCFl Object. The content must exist in an earlier version, and 
+                    the current version of an OCFL Object. The content must exist in an earlier version, and 
                     not the previous version. The file path may exist in the previous version, effectively updating
                     the file path with older content, or it may not, effectively adding the older content as a new 
                     file. 
