--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -155,7 +155,7 @@ OCFL preserves files and their content, with directories serving as a useful org
 directory consists only of filesystem metadata and therefore, as noted above, is not amenable to direct
 preservation in OCFL. If the preservation of empty directories is considered essential then the suggested route
 is to insert a zero length file named <code>.keep</code> into the directory which will ensure directories are preserved
-as part of the files' path.
+as part of the file's path.
 </p>
 </section><section>
 
