--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -166,7 +166,9 @@
     <p>
       OCFL object versions are composed of series of files/bitstreams but OCFL does not make any disctinction between
       different types of files other than those reserved for OCFL functionality: the inventory, its digest file, and
-      conformance declaration files. It is possible, for example, to create separate data and metadata directories within each version to help organize material but all files are treated equally for the purpose of OCFL validation and management.
+      conformance declaration files. It is possible, for example, to create separate data and metadata directories
+      within each version to help organize material but all files are treated equally for the purpose of OCFL
+      validation and management.
     </p>
   </section>
 
