--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -433,7 +433,8 @@
     </p>
     <p>
       When a new version of an OCFL Object is created from an earlier version and a client wishes to implement forward
-      delta differencing, then the possible file operations are handled in the following manner (with reference to the state and manifest blocks of the OCFL object's inventory file):
+      delta differencing, then the possible file operations are handled in the following manner (with reference to the
+      state and manifest blocks of the OCFL object's inventory file):
     </p>
     <ul>
         <li>
