--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -878,7 +878,7 @@
             <code>empty2.txt</code> is added with the same content as <code>empty.txt</code>, and
             <code>image.tiff</code> is removed. In <code>v3</code> the file <code>empty.txt</code> is
             removed, and <code>image.tiff</code> is reinstated. As a result of forward-delta versioning, the
-            object tree above shows only new content added in each version. The inventory show below details
+            object tree above shows only new content added in each version. The inventory shown below details
             the other changes, includes additional fixity information using <code>md5</code> and
             <code>sha1</code> digest algorithms, and minimal metadata for each version. 
         </p>
